@@ -1737,16 +1737,22 @@ can be converted into an Action object
 (see the next section).
 
 The generator function
-takes 3 arguments:
+takes four arguments:
 .I source 
 - a list of source nodes, 
 .I target
 - a list of target nodes,
 .I env
-- the construction environment. Example:
+- the construction environment.
+.I for_signature
+- a Boolean value that specifies
+whether the generator is being called
+for generating a build signature
+(as opposed to actually executing the command).
+Example:
 
 .ES
-def g(source, target, env):
+def g(source, target, env, for_signature):
     return [["gcc", "-c", "-o"] + target + source] 
 
 b = Builder(name="Object", generator=g)
