@@ -50,6 +50,10 @@ RELEASE 0.07 - Thu, 25 Apr 2002 06:24:50 -0500
       is an optional SCons.Node.FS.FS object.  You will need to update
       the interfaces of any local Scanner functions you have defined.
 
+    - Command generator functions now take a fourth argument,
+      for_signature.  You will need to add this argument to any
+      generator functions you have defined.
+
   Please note the following important changes since release 0.05:
 
     - Python functions as Builder actions now take Node objects, not
